<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>
    <item
        android:id="@+id/calendar"
        android:enabled="true"
        android:icon="@drawable/ic_calendar"
        android:title="@string/calendar"/>
    <item
        android:id="@+id/exercises"
        android:enabled="true"
        android:icon="@drawable/ic_exercises"
        android:title="@string/exercises"/>
    <item
        android:id="@+id/content"
        android:enabled="true"
        android:icon="@drawable/ic_content"
        android:title="@string/content"/>
    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"/>
</menu>