<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.main.ContentFragment"
    android:isScrollContainer="true"
    >
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin"
        android:background="@color/card_background"
        app:cardCornerRadius="@dimen/corn_radius"
        android:isScrollContainer="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:padding="@dimen/padding"
                >
                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextViewHeader"
                    android:text="@string/title" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:layout_marginEnd="@dimen/margin"/>

                    <TextView
                        android:id="@+id/author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/author" />
                </LinearLayout>

                <TextView
                    android:id="@+id/categories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/categories" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="@dimen/article_illustration"
                android:layout_height="@dimen/article_illustration"
                android:layout_margin="@dimen/margin"
                android:background="@color/cardview_dark_background"
                android:contentDescription="@string/gif"
                android:scaleType="fitCenter"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/fitness"/>
            <TextView
                android:id="@+id/content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text" />
            </LinearLayout>


    </androidx.cardview.widget.CardView>

</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>